@@ -53,6 +53,13 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>mongodb</artifactId>
+    <version>1.19.3</version>
+    <scope>test</scope>
+</dependency>
+
 
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -99,23 +106,35 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-failsafe-plugin</artifactId>
     <version>3.2.5</version>
-    <configuration>
-        <argLine>
-            --add-opens java.base/java.util=ALL-UNNAMED
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-opens java.desktop/java.awt=ALL-UNNAMED
-            --add-opens java.desktop/javax.swing=ALL-UNNAMED
-        </argLine>
-    </configuration>
+
     <executions>
         <execution>
+            <id>default-it</id>
             <goals>
                 <goal>integration-test</goal>
                 <goal>verify</goal>
             </goals>
         </execution>
+        
+        <execution>
+            <id>e2e-tests</id>
+            <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+            </goals>
+            <configuration>
+                <excludes>
+                    <exclude>**/*IT.java</exclude>
+                </excludes>
+                <includes>
+                    <include>**/*E2E.java</include>
+                </includes>
+            </configuration>
+        </execution>
+
     </executions>
 </plugin>
+
 
 
             <plugin>
@@ -180,33 +199,13 @@
             </plugin>
 
             <plugin>
-                <groupId>com.dkanejs.maven.plugins</groupId>
-                <artifactId>docker-compose-maven-plugin</artifactId>
-                <version>2.0.1</version>
-                <executions>
-                    <execution>
-                        <id>start-mongo</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>up</goal>
-                        </goals>
-                        <configuration>
-                            <composeFile>${project.basedir}/docker-compose.yml</composeFile>
-                            <detachedMode>true</detachedMode>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-mongo</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>down</goal>
-                        </goals>
-                        <configuration>
-                            <composeFile>${project.basedir}/docker-compose.yml</composeFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+  <groupId>com.dkanejs.maven.plugins</groupId>
+  <artifactId>docker-compose-maven-plugin</artifactId>
+  <version>2.0.1</version>
+  <configuration>
+    <skip>true</skip>
+  </configuration>
+</plugin>
 
         </plugins>
     </build>
